<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">몽글몽글</string>
    <string name="app_subtitle">당신에게 추억을 선물합니다.</string>

    <!-- Common -->
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="exit">나가기</string>
    <string name="keyword_template">#%1$s</string>
    <string name="percent_template">%1$s%%</string>
    <string name="watch_later">다음에 볼게요</string>
    <string name="watch_now">지금 볼게요!</string>
    <string name="write_complete">작성완료</string>
    <string name="empty"><font color="#B2B7BD">비어있음</font></string>
    <string name="default_notification_channel_id">mongle_firebase_messaging</string>
    <string name="check_update">업데이트 확인 중…</string>

    <string name="wip_title">공사중인 기능이에요</string>
    <string name="wip_subtitle">통계 기능은 아직 개발중이에요…\n다음 버전에 봐요!</string>

    <!-- Emotion -->
    <string name="emotion_angry">분노</string>
    <string name="emotion_anxious">불안</string>
    <string name="emotion_tired">피곤</string>
    <string name="emotion_happy">행복</string>
    <string name="emotion_neutral">중립</string>
    <string name="emotion_sad">슬픔</string>

    <!-- Login -->
    <string name="login_anonymous"><u>로그인하지 않고 둘러보기</u></string>
    <string name="login_kakao">카카오로 시작하기</string>

    <!-- Service agreement -->
    <string name="agree_title">몽글몽글이 처음이시군요 🙌\n잠시 동의받겠습니다!</string>
    <string name="agree_all">전체동의</string>

    <!-- Password -->
    <string name="pwd_set_title">비밀번호 설정</string>
    <string name="pwd_set_subtitle">앱에서 사용할 암호를 입력하세요.</string>
    <string name="pwd_reenter_title">다시 입력</string>
    <string name="pwd_reenter_subtitle">방금 입력했던 비밀번호를 다시 입력해주세요.</string>
    <string name="pwd_auth_title">잠금번호 입력</string>
    <string name="pwd_wrong">틀린 비밀번호입니다. 다시 입력해주세요.</string>
    <string name="pwd_not_matched">방금 입력했던 비밀번호와 다릅니다. 다시 설정해주세요.</string>
    <string name="pwd_lost">암호분실</string>
    <string name="pwd_delete">암호삭제</string>

    <!-- Password Input Dialog -->
    <string name="pwd_input_confirm_message_title">이 비밀번호를 사용할까요?</string>
    <string name="pwd_input_confirm_message_subtitle">비밀번호는 앱에 저장되지만, 앱을 삭제하면 비밀번호도 삭제되므로 기억할 수 있는 비밀번호로 설정해야합니다.</string>
    <string name="pwd_input_nopwd_message_title">비밀번호를 사용하지 않으세요?</string>
    <string name="pwd_input_nopwd_message_subtitle">그러면 저희가 임의로 비밀번호를 설정해서 \n암호화합니다. 그래도 될까요?</string>
    <string name="pwd_input_title_1">카카오톡 메시지를 잠글</string>
    <string name="pwd_input_title_2">비밀번호를 입력해주세요.</string>
    <string name="pwd_input_hint">원하는 암호 입력</string>
    <string name="pwd_input_hint_apply_all_time">＊ 한번 입력하면 기기에 저장되어 자동으로 계속 적용됩니다.</string>
    <string name="pwd_input_not_want_to_use">사용 안 함</string>

    <!-- Unlock Dialog -->
    <string name="unlock_title_1">이 메시지들은 잠겨있습니다.</string>
    <string name="unlock_title_2">기기에 저장된 비밀번호로\n암호를 해제할까요?</string>
    <string name="unlock_hint_1">* 클릭시 암호화 해제</string>
    <string name="unlock_hint_2">한번만 해제하면 앱이 꺼질때까지 자동으로 해제됩니다.</string>

    <!-- Integration dialog -->
    <string name="integration_title">반가워요 👋\n우리 더 친해져요 :)</string>
    <string name="integration_subtitle">클라우드 및 캘린더 연동하기</string>
    <string name="integration_skip">다음에 할래요!</string>
    <string name="integration_naver_cloud">네이버 MYBOX 연동하기</string>
    <string name="integration_google_cloud">구글 클라우드 연동하기</string>
    <string name="integration_google_calendar">구글 캘린더 연동하기</string>

    <!-- Tutorial -->
    <string name="skip">건너뛰기</string>
    <string name="tutorial_title_1">안녕하세요! 튜토리얼에 오신것을 환영합니다!</string>
    <string name="tutorial_go_kakao">카카오톡 앱 열기</string>

    <!-- New favorite -->
    <string name="new_favorite_title">당신의 💌\n소중한 추억을 저장하세요 :)</string>
    <string name="new_favorite_title_hint">제목을 입력해주세요.</string>
    <string name="new_favorite_fill_blanks">모든 입력란을 채워주세요.</string>

    <!-- Set emotion -->
    <string name="set_emotion_title">이날의 기분은 어땠나요?\n궁금해요. 알려주세요!</string>

    <!-- Bottom tab title -->
    <string name="tab_overview_title">캘린더</string>
    <string name="tab_album_title">앨범</string>
    <string name="tab_statistics_title">통계</string>
    <string name="tab_favorite_title">찜</string>
    <string name="tab_settings_title">MY</string>

    <!-- Kakaotalk analyze tutorial -->
    <string name="kakao_tutorial_title_1"><font color="#EB6E6D">카카오톡</font>에서 분석하고 싶은 톡방 입장 후,\n우측 상단 <font color="#EB6E6D">메뉴(3개의 줄) 아이콘</font> 클릭</string>
    <string name="kakao_tutorial_title_2">우측 사이드바가 나타나며,\n하단 <font color="#EB6E6D">설정(톱니바퀴) 아이콘</font> 클릭</string>
    <string name="kakao_tutorial_title_3">아래쪽 <font color="#EB6E6D">"대화내용 내보내기"</font> 클릭</string>
    <string name="kakao_tutorial_title_4"><font color="#EB6E6D">"텍스트만 보내기"</font> 클릭</string>
    <string name="kakao_tutorial_title_5"><font color="#EB6E6D">"몽글몽글"</font> 앱 선택</string>

    <!-- Security welcome messages -->
    <string name="security_tutorial_title_1">카톡 데이터 제공이\n꺼려지시나요?</string>
    <string name="security_tutorial_subtitle_1">몽글몽글은 안전하게 데이터를 저장합니다.\n데이터들은 오직 비밀번호를 아는 여러분들만 볼 수 있어요!</string>
    <string name="security_tutorial_title_2">신중하게 비밀번호를\n설정해주세요.</string>
    <string name="security_tutorial_subtitle_2">비밀번호를 잊으면 그 누구도 데이터를 열람할 수 없습니다.\n복구도 불가능하니 한번 더 신중하게!</string>
    <string name="security_tutorial_title_3">민감한 정보라면\n안전하게 보관하는 것이 좋겠죠?</string>
    <string name="security_tutorial_subtitle_3">비밀번호를 설정하지 않아도, 여러분의 데이터는 기본적으로\n암호화되어 보관되므로 안심하세요!</string>

    <!-- Overview -->
    <string name="overview_intro">%1$s님 👋\n<b>%2$s\n</b>%3$s</string>
    <string name="overview_intro_message_today">오늘 하루도 수고했어요.</string>
    <string name="overview_intro_message_other_day">이날의 기억을 떠올려봅시다.</string>
    <string name="overview_intro_message_angry">화나는 하루였어요.</string>
    <string name="overview_intro_message_anxious">불안한 하루였어요.</string>
    <string name="overview_intro_message_tired">힘든 하루였어요.</string>
    <string name="overview_intro_message_happy">기분 좋은 하루였어요.</string>
    <string name="overview_intro_message_neutral">평범한 하루였어요.</string>
    <string name="overview_intro_message_sad">우울한 하루였어요.</string>
    <string name="overview_title_empty"><font color="#B2B7BD">기록이 없네요.</font></string>
    <string name="overview_keyword">[이날의 키워드]</string>
    <string name="overview_go_tutorial_kakao_export">카카오톡 분석 방법 보기</string>

    <!-- Kakaotalk exporting -->
    <string name="sending_title" tools:ignore="TypographyEllipsis,TypographyFractions">데이터 전송 중... (1/2)</string>
    <string name="analyzing_title" tools:ignore="TypographyEllipsis">분석 중... (2/2)</string>
    <string name="analyzing_subtitle1">편하게 다른 일 보고오세요! 😁</string>
    <string name="analyzing_subtitle2">분석이 끝나면 알림으로 알려드릴게요!\n분석 작업은 30분이상 걸릴 수 있습니다.</string>
    <string name="error_cant_find_shared_file">공유된 카카오톡 텍스트파일을 불러올 수 없습니다.</string>
    <string name="error_need_login_to_analyze">로그인해야 대화내용 분석을 요청할 수 있습니다.</string>
    <string name="error_cancelled_analyze">취소했습니다.</string>

    <!-- Day detail -->
    <string name="detail_diary_title">📖 오늘 하루 기록</string>
    <string name="detail_diary_empty_feedback">기분은 어때요? 자유롭게 일기를 남겨보세요!\n당신의 이야기가 듣고싶어요!</string>
    <string name="detail_analyzed_title1">나는 어떤 감정들을 느꼈을까?</string>
    <string name="detail_analyzed_title2">아래 감정이들을 눌러보세요 :)</string>
    <string name="detail_photos_title">이날 찍은 사진들</string>
    <string name="detail_plans_title">이날의 일정</string>
    <string name="detail_diary_empty"><font color="#B2B7BD">클릭해서 일기를 작성해보세요!</font></string>
    <string name="detail_photo_empty"><font color="#B2B7BD">이날 찍은 사진이 없어요!</font></string>

    <!-- Dialog -->
    <string name="dialog_analyze_complete"><font color="#EB6E6D">몽글몽글</font>이\n 감정 분석을 완료했어요 :)</string>
    <string name="dialog_arrived_gift">띵동🔔\n행복한 기억이 도착했어요:)</string>
    <string name="dialog_input_room_name">상대 또는 카톡방 이름을 입력해주세요!\n중복 분석 방지를 위해 사용됩니다.</string>
    <string name="dialog_input_room_name_hint">상대 또는 카톡 방의 이름</string>
    <string name="dialog_need_update_title">업데이트 필요</string>
    <string name="dialog_need_update_description">업데이트해야 사용하실 수 있어요!</string>

    <!-- Setting -->
    <string name="setting_title_1">%1$s님,</string>
    <string name="setting_title_2">오늘 기분은 어때요?</string>
    <string name="setting_change_username">이름 변경</string>
    <string name="setting_screen_password">화면보호 비밀번호 설정</string>
    <string name="setting_qanda">자주 묻는 Q&amp;A</string>
    <string name="setting_encrypt_password">개인 데이터 암호 설정</string>
    <string name="setting_alert">앱 알림</string>
    <string name="setting_leave">몽글몽글 서비스 탈퇴</string>
    <string name="setting_terms_of_service">이용약관</string>
    <string name="setting_privacy_policy">개인정보 처리방침</string>
    <string name="setting_version">앱 버전</string>

    <!-- Setting URLs -->
    <string name="setting_url_qanda">https://mongle-bucket-test.s3.ap-northeast-2.amazonaws.com/Q%26A.html</string>
    <string name="setting_url_privacy_policy">https://mongle-bucket-test.s3.ap-northeast-2.amazonaws.com/%EA%B0%9C%EC%9D%B8%EC%A0%95%EB%B3%B4%EC%B2%98%EB%A6%AC%EB%B0%A9%EC%B9%A8.html</string>

    <!-- Leaving -->
    <string name="leaving_title">너무 아쉽네요 😭\n정말 몽글몽글 탈퇴하실껀가요?</string>
    <string name="leaving_message_1">계정이 삭제됩니다.</string>
    <string name="leaving_message_2">회원님의 작성 이력, 분석 정보, 설정이 모두 삭제됩니다.</string>
    <string name="leaving_message_3">연결된 소셜 계정 정보가 삭제됩니다.</string>
    <string name="leaving_message_agree">안내사항을 확인하고 회원탈퇴에 동의</string>
    <string name="leaving_ok">탈퇴하기</string>

    <!-- Emotion Messages -->
    <string name="emotion_message_empty_data_title">메시지가 없어요..</string>
    <string name="emotion_message_empty_data_subtitle">비율이 0%라는건 메시지가 없다는 뜻이에요.</string>
    <string name="emotion_message_proportion">나의 %1$s비율 <font color="#EB6E6D">%2$d%%</font></string>

    <!-- Name setting -->
    <string name="name_setting_title">몽글몽글에 오신걸 환영해요 👋\n당신의 이름을 알려주세요!</string>
    <string name="name_setting_hint">사용하실 닉네임을 적어주세요!</string>

    <!-- Favorite -->
    <string name="favorite_title">잊고 싶지 않은 🎀\n나만의 감정 모음집</string>
    <string name="favorite_empty">찜 목록이 비어있어요.\n즐거웠던 날들을 찜해보세요!</string>

    <!-- Statistics -->
    <string name="statistics_weekly">Weekly</string>
    <string name="statistics_monthly">Monthly</string>
    <string name="statistics_yearly">Yearly</string>
    <string name="statistics_monthly_happy_score">이번달은 얼마나 행복했을까?</string>
    <string name="statistics_monthly_emotions">이번달은 어떤 감정들이 있었을까?</string>
    <string name="statistics_empty_data_title">데이터가 없네요..</string>
    <string name="statistics_empty_data_subtitle">이 기간동안 분석된 감정이 아예 없어요.</string>
    <string name="statistics_overview_1">다소 우울했었어요.. 😥</string>
    <string name="statistics_overview_2">무난했어요 🙂</string>
    <string name="statistics_overview_3">꽤나 행복했었어요! 😀</string>
</resources>