<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Mongle">

        <!-- BottomSheetDialogFragment에서 margin을 주기위해 parent
         layout을 선언함.-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp"
            android:orientation="vertical"
            tools:ignore="UselessParent,UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/leaving_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leaving_message_1"
                    android:textColor="@color/disabled"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leaving_message_2"
                    android:textColor="@color/disabled"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="@color/point" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leaving_message_3"
                    android:textColor="@color/disabled"
                    android:textSize="12sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbx_leaving_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/leaving_message_agree"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_leaving_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:enabled="@{cbxLeavingAgree.checked}"
                android:text="@string/leaving_ok" />
        </LinearLayout>
    </FrameLayout>
</layout>