<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_15"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/dialog_input_room_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/field_input_room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_round_gray"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textSize="14sp"
                android:autofillHints="name"
                android:inputType="text"
                android:hint="@string/dialog_input_room_name_hint" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_input_room_name_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_down"
            android:text="@string/ok" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>